# DragonRegen

./: CICD_Overview.md  KafkaDragon.yml  README.md  docker-comp-airflow.yml  docker-compose.yml  error.txt  extra_OG.yml  extra_OG_Vlatest.yml  extra_V341.yml  pyproject.toml  pytest.ini  pytest.ini.block  requirements.txt  testSpark_Cassandra.ipynb  testkafka.ipynb
.github/workflows/: python-app.yml
containers/: book_api_server.dockerfile
dags/: Kafka_Stream.py
docs/: API_Book_Exploring.md  Brainstorming-Notes.md  SubPackage-Overview-Template.md  modular-api-structure.md
docs/AIGuardian/: AIGuardian-Overview.md  CreateActionPipeline.ipynb  CreateActionReStruct.ipynb  CreateActionSchema.ipynb  CreateActionSimple.ipynb  output_schema.json
docs/DataCreator/: DataCreator-Overview.md
docs/MetaFort/: MetaFort-Overview.md
expirements/Kafka_MultiConsumer/: Kafka_Producers.ipynb  Spark_Kafka_Stream.ipynb
expirements/Sample_API/: book_JAPI_client.java  book_client.py
gitData/SSA_FirstNames_Stats/: .part-00000-1bd61640-eea2-43a7-8ddb-776a03c00e4c-c000.snappy.parquet.crc  .part-00000-db6505d8-b099-4810-9f5d-d6ed7ed0a21a-c000.snappy.parquet.crc  part-00000-1bd61640-eea2-43a7-8ddb-776a03c00e4c-c000.snappy.parquet  (+1 more)
package/Book_API/: app.py
src/Book_API/: __init__.py  (+5 more)
test/: test_book_services.py
workarea/: Investigate_Census and SSA_name_data.ipynb  Testing_Column_Generator.ipynb  Testing_Generator.ipynb  Testing_Schema_Generators.ipynb  clean_Census_name_data.ipynb  prep_census_col_data.ipynb  prep_ssa_name_data.ipynb  testSpark_Cassandra.ipynb  testkafka.ipynb
(+139 files in other folders)
