[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-api"
version = "0.1.0"
description = "A Book API service"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-pythonpath>=0.7.4",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
]

[tool.pytest.ini_options]
python_paths = [
    ".",
    "src",
    "src/Book_API"
]
testpaths = ["tests"]
pythonpath = [
    "."
]