[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-api"
version = "0.1.0"
description = "A Book API service"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[tool.pytest.ini_options]
python_paths = [
    ".",
    "src",
    "src/Book_API"
]
testpaths = ["tests"]
pythonpath = [
    "."
]